--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.15.0",
     "node-fetch": "^3.3.1",
     "ts-node": "^10.9.1",
@@ -13,10 +15,12 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.21",
-    "prisma": "^4.11.0",
+    "prisma": "^4.16.2",
     "zod": "^3.21.4",
     "zod-express-middleware": "^1.4.0"
   }
